Correct GOV.UK font size
(It was slightly too small)

--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -5,6 +5,7 @@
   background: url("/assets/header-crown.png") 0 0.67em no-repeat;
   color: #fff;
   font-family: $gill-sans-font-stack;
+  font-size: 20px;
   margin-left: 0;
   padding-left: 2.3em;
 }
